# suboptimal_ctf

./: .gitignore  Cargo.toml  make_snapshot.sh  reset.sh  run.sh
dockers/: Dockerfile.snapshot  Dockerfile.target
src/: constants.rs  fuzzer.rs
