[package]
name = "example_fuzzer"
version = "0.1.0"
edition = "2021"
exclude = ["snapshot", "docker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
snapchange = { version = "0.1.0", git = "https://github.com/f0rki/snapchange", branch = "custom-feedback", features = ["custom_feedback"] }
rand = "0.8"
log = "0.4"

[build-dependencies]
regex = "1"

[profile.release]
panic = "abort"
lto = false
codegen-units = 255
opt-level = 3
debug = true
